--- a/src/MSetExplorer/XPoc/PerformanceHarness/PerformanceHarnessMainWindow.xaml
+++ b/src/MSetExplorer/XPoc/PerformanceHarness/PerformanceHarnessMainWindow.xaml
@@ -26,10 +26,10 @@
 
         <StackPanel Grid.Row="1" Orientation="Vertical" Margin="0,10,5,10">
 
-            <StackPanel Orientation="Horizontal" >
+            <!--<StackPanel Orientation="Horizontal" >
                 <TextBlock Width="145" Margin="3" FontSize="14" Text="Peak MapSections:" />
                 <TextBox Width="150" Margin="3" VerticalAlignment="Center" Text="{Binding MaxPeakSections}"/>
-            </StackPanel>
+            </StackPanel>-->
 
             <StackPanel Orientation="Horizontal" >
                 <TextBlock Width="145" Margin="3" FontSize="14" Text="Peak Vectors:" />
