--- a/src/MSetExplorer/XPoc/PerformanceHarness/PerformanceHarnessMainWindow.xaml
+++ b/src/MSetExplorer/XPoc/PerformanceHarness/PerformanceHarnessMainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MSetExplorer.XPoc"
         mc:Ignorable="d"
-        Title="PerformanceHarnessMainWindow" Height="450" Width="800">
+        Title="PerformanceHarnessMainWindow" Height="750" Width="800">
     <Grid>
 
         <Grid.RowDefinitions>
@@ -62,6 +62,32 @@
                 <TextBox Width="150" Margin="3" VerticalAlignment="Center" Text="{Binding Multiplications}"/>
             </StackPanel>
 
+            <StackPanel Orientation="Horizontal" >
+                <TextBlock Width="145" Margin="3" FontSize="14" Text="Additions:" />
+                <TextBox Width="150" Margin="3" VerticalAlignment="Center" Text="{Binding Additions}"/>
+            </StackPanel>
+
+            <StackPanel Orientation="Horizontal" >
+                <TextBlock Width="145" Margin="3" FontSize="14" Text="Negations:" />
+                <TextBox Width="150" Margin="3" VerticalAlignment="Center" Text="{Binding Negations}"/>
+            </StackPanel>
+
+            <StackPanel Orientation="Horizontal" >
+                <TextBlock Width="145" Margin="3" FontSize="14" Text="Conversions:" />
+                <TextBox Width="150" Margin="3" VerticalAlignment="Center" Text="{Binding Conversions}"/>
+            </StackPanel>
+
+            <StackPanel Orientation="Horizontal" >
+                <TextBlock Width="145" Margin="3" FontSize="14" Text="Splits:" />
+                <TextBox Width="150" Margin="3" VerticalAlignment="Center" Text="{Binding Splits}"/>
+            </StackPanel>
+
+            <StackPanel Orientation="Horizontal" >
+                <TextBlock Width="145" Margin="3" FontSize="14" Text="Comparisons:" />
+                <TextBox Width="150" Margin="3" VerticalAlignment="Center" Text="{Binding Comparisons}"/>
+            </StackPanel>            
+            
+            
             <StackPanel Orientation="Horizontal" >
                 <TextBlock Width="145" Margin="3" FontSize="14" Text="Total Time:" />
                 <TextBox Width="150" Margin="3" VerticalAlignment="Center" Text="{Binding OverallElapsed}"/>
