--- a/src/WpfDisplayPOC/MainWindow.xaml
+++ b/src/WpfDisplayPOC/MainWindow.xaml
@@ -5,10 +5,11 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfDisplayPOC"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="400" Width="600"
+        SizeChanged="Window_SizeChanged">
     <Grid>
-
-        <TextBlock>Hi</TextBlock>
-
+        <Canvas Name="myCanvas" Background="DarkMagenta" Margin="10" MouseDown="myCanvas_MouseDown" Loaded="myCanvas_Loaded">
+            <Image Name="myImage"/>
+        </Canvas>
     </Grid>
 </Window>
