Moved the logic of determining the number of MEngineClients to allocate from the MapSectionGeneratorProject to the MExplorer project, App.xaml.cs class. Also removed the dependency on the MEngineClient project from the MapSectionProviderLib project.

--- a/src/WpfDisplayPOC/SkiaStarField.xaml
+++ b/src/WpfDisplayPOC/SkiaStarField.xaml
@@ -31,7 +31,7 @@
             <Image x:Name="myImage"/>
         </Canvas>-->
 
-        <local:SimpleSkiaCanvas x:Name="mySkiaCanvas" CanvasClear="DarkMagenta" IsClearCanvas="False" Margin="10 0 10 10">
+        <local:SimpleSkiaCanvas x:Name="mySkiaCanvas" CanvasClear="AntiqueWhite" IsClearCanvas="True" Margin="10 0 10 10">
         </local:SimpleSkiaCanvas>
 
 
