--- a/src/WpfDisplayPOC/App.xaml
+++ b/src/WpfDisplayPOC/App.xaml
@@ -2,8 +2,10 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:WpfDisplayPOC"
-             StartupUri="SkiaStarField.xaml">
+             StartupUri="NoBlockStarfield.xaml">
     <Application.Resources>
          
     </Application.Resources>
+
+
 </Application>
