--- a/src/WpfMapDisplayPOC/App.xaml
+++ b/src/WpfMapDisplayPOC/App.xaml
@@ -1,11 +1,9 @@
-﻿<Application x:Class="WpfDisplayPOC.App"
+﻿<Application x:Class="WpfMapDisplayPOC.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:WpfDisplayPOC"
-             StartupUri="SkiaStarFieldNoBlock.xaml">
+             xmlns:local="clr-namespace:WpfMapDisplayPOC"
+             StartupUri="MainWindow.xaml">
     <Application.Resources>
          
     </Application.Resources>
-
-
 </Application>
