--- a/src/WpfMapDisplayPOC/App.xaml
+++ b/src/WpfMapDisplayPOC/App.xaml
@@ -1,8 +1,8 @@
 ﻿<Application x:Class="WpfMapDisplayPOC.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:WpfMapDisplayPOC"
-             StartupUri="MainWindow.xaml">
+             xmlns:local="clr-namespace:WpfMapDisplayPOC">
+    
     <Application.Resources>
          
     </Application.Resources>
