--- a/src/WpfMapDisplayPOC/MainWindow.xaml
+++ b/src/WpfMapDisplayPOC/MainWindow.xaml
@@ -15,13 +15,17 @@
         </Grid.RowDefinitions>
 
         <Grid Grid.Row="0" Width="1026" Height="1026">
-            <local:MSectionDispControl x:Name="MSectionDispControl1"/>
+            <Border BorderThickness="1" BorderBrush="Black" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+
+                <local:MapSectionDispControl x:Name="MapSectionDispControl1"/>
+            </Border>
         </Grid>
 
         <Border Grid.Row="1" BorderThickness="0" BorderBrush="Black" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
 
             <StackPanel HorizontalAlignment="Center" Orientation="Horizontal">
-                <Button Name="btnLoad" HorizontalAlignment="Center" Width="100" FontSize="16" Margin="10" Click="LoadButton_Click" IsDefault="True" TabIndex="4" >_Load</Button>
+                <Button Name="btnLoadUi" HorizontalAlignment="Center" Width="100" FontSize="16" Margin="10" Click="LoadButtonUiThread_Click" IsDefault="True" TabIndex="4" >Load _Ui</Button>
+                <Button Name="btnLoadBg" HorizontalAlignment="Center" Width="100" FontSize="16" Margin="10" Click="LoadButtonBgThread_Click" IsDefault="True" TabIndex="4" >Load _Bg</Button>
                 <Button Name="btnClose" HorizontalAlignment="Center" Width="100" FontSize="16" Margin="10" Click="CloseButton_Click" IsCancel="True" TabIndex="5">_Close</Button>
 
             </StackPanel>
