--- a/src/MSetExplorer/MapDisplay/Controls/MapDisplayControl.xaml
+++ b/src/MSetExplorer/MapDisplay/Controls/MapDisplayControl.xaml
@@ -8,8 +8,11 @@
              d:DesignHeight="1100" d:DesignWidth="1100"
              x:Name="Mdc">
     <Grid>
-        <Border BorderThickness="1" BorderBrush="Black" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
-            <Canvas Name="MainCanvas" Width="1024" Height="1024" HorizontalAlignment="Center" VerticalAlignment="Center" Background="Transparent">
+
+
+
+            <Border Grid.Row="0" Grid.Column="0" BorderThickness="1" BorderBrush="Black">
+            <Canvas Name="MainCanvas"  HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Background="Transparent">
                 <Image x:Name="myImage" Source="{Binding Bitmap}"/>
             </Canvas>
         </Border>
