Updated the BitmapGrid class to use TryGetAdjustedBlockPosition and IsBlockVisible, even though these should not be need as a way to detect other logic errors.
Updated the MapCalcSettings class to include UseEscapeVelocities and SaveTheZValues properties.

--- a/src/MSetExplorer/MapSettings/MapCalcSettingsControl.xaml
+++ b/src/MSetExplorer/MapSettings/MapCalcSettingsControl.xaml
@@ -25,8 +25,8 @@
             <TextBlock Text="Target Iterations:" Grid.Row="0" Margin="0,5" Height="18" />
             <TextBox x:Name="txtTargetIterations" Grid.Row="0" Grid.Column="1" Margin="3" VerticalAlignment="Center" Text="{Binding TargetIterations, UpdateSourceTrigger=LostFocus}"/>
 
-            <TextBlock Text="Requests Per Job:" Grid.Row="1" Margin="0,5" Height="18" />
-            <TextBox x:Name="txtRequestsPerJob" Grid.Row="1" Grid.Column="1" Margin="3" VerticalAlignment="Center" Text="{Binding RequestsPerJob}" />
+            <TextBlock Text="Threshold:" Grid.Row="1" Margin="0,5" Height="18" />
+            <TextBox x:Name="txtThreshold" Grid.Row="1" Grid.Column="1" Margin="3" VerticalAlignment="Center" Text="{Binding Threshold}" />
 
             <TextBlock Text="Available Iterations:" Grid.Row="2" Margin="0,5" Height="18" />
             <TextBox x:Name="txtAvailableIterations" Grid.Row="2" Grid.Column="1" Margin="3" VerticalAlignment="Center" Text="{Binding TargetIterationsAvailable}"/>            
