--- a/src/MSetExplorer/MapDisplay/Controls/MapSectionDisplayControl.xaml
+++ b/src/MSetExplorer/MapDisplay/Controls/MapSectionDisplayControl.xaml
@@ -3,13 +3,14 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:MSetExplorer"
+             xmlns:local="clr-namespace:MSetExplorer" d:DataContext="{d:DesignInstance Type=local:MapSectionDisplayViewModel}"
              mc:Ignorable="d" 
              d:DesignHeight="1100" d:DesignWidth="1100"             
              x:Name="Mdc">
     <Grid>
         <Border Grid.Row="0" Grid.Column="0" BorderThickness="1" BorderBrush="Black">
-            <local:BitmapGridControl x:Name="BitmapGridControl1"/>
+            <local:BitmapGridControl x:Name="BitmapGridControl1" ImageSource="{Binding Bitmap}" ImageOffset="{Binding CanvasControlOffset}"
+                                     ViewPortSize="{Binding CanvasSize}" ViewPortSizeInBlocks="{Binding CanvasSizeInBlocks}"/>
         </Border>
     </Grid>
 </UserControl>
