Removed the LoadPixelArray method from the MapSectionHelper. Updated the BitmapGridControl to use Dependency Properties for the ViewPortSize. Moved the CanvasSizeInBlocks logic back to the MapSectionDisplayViewModel. Implemented the Updated the HandleDisplaySizeUpdate method in the MapSectionDisplayViewModel class. Began updating the  MapJobHelper to support calcuating a new MapAreaInfo for DisplaySize updates.

--- a/src/MSetExplorer/MapDisplay/Controls/MapSectionDisplayControl.xaml
+++ b/src/MSetExplorer/MapDisplay/Controls/MapSectionDisplayControl.xaml
@@ -10,7 +10,7 @@
     <Grid>
         <Border Grid.Row="0" Grid.Column="0" BorderThickness="1" BorderBrush="Black">
             <local:BitmapGridControl x:Name="BitmapGridControl1" ImageSource="{Binding Bitmap}" ImageOffset="{Binding CanvasControlOffset}"
-                                     ViewPortSize="{Binding CanvasSize}" ViewPortSizeInBlocks="{Binding CanvasSizeInBlocks}"/>
+                                     ViewPortSize="{Binding CanvasSize}" />
         </Border>
     </Grid>
 </UserControl>
