--- a/src/MSetExplorer/Explorer/ExplorerWindow.xaml
+++ b/src/MSetExplorer/Explorer/ExplorerWindow.xaml
@@ -114,8 +114,8 @@
         </Menu>
         
         <!-- Pan Buttons, Back/Forward, Display Size -->
-        <Border Grid.Row="1" Grid.Column="0" BorderThickness="0.75" BorderBrush="Black" x:Name="colLeft" Margin="5">
-            <Grid >
+        <Border Grid.Row="1" Grid.Column="0" BorderThickness="0.75" BorderBrush="Black" Margin="5" x:Name="colLeftBorder">
+            <Grid x:Name="colLeft" Visibility="Visible">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto"/>
                     <RowDefinition Height="Auto"/>
@@ -138,7 +138,7 @@
                     <Button Name="btnGoForward" HorizontalAlignment="Center" Width="100" FontSize="16" Margin="10,5" Command="local:CustomCommands.JobGoForward">Go Forward</Button>
                 </StackPanel>
 
-                <local:JobProgressControl x:Name="jobProgress1" Grid.Row="2" Margin="5" Visibility="Collapsed"/>
+                <local:JobProgressControl Grid.Row="2" Margin="5" Visibility="Collapsed" x:Name="jobProgress1"/>
 
                 <StackPanel Grid.Row="3" HorizontalAlignment="Left" Orientation="Vertical" Margin="0,50" x:Name="dispSecScreenSizeButtons">
                     <Grid Margin="5,0" x:Name="grdTop">
@@ -178,7 +178,7 @@
             <local:MapSectionDisplayControl x:Name="mapDisplay1"></local:MapSectionDisplayControl>
         </Border>
 
-        <Grid Grid.Row="1" Grid.Column="2" x:Name="colRight">
+        <Grid Grid.Row="1" Grid.Column="2" x:Name="colRight" Visibility="Visible">
 
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
