--- a/src/MSetExplorer/MapDisplay/Controls/MapSectionDisplayControl.xaml
+++ b/src/MSetExplorer/MapDisplay/Controls/MapSectionDisplayControl.xaml
@@ -9,8 +9,7 @@
              x:Name="Mdc">
     <Grid>
         <Border Grid.Row="0" Grid.Column="0" BorderThickness="1" BorderBrush="Black">
-            <local:BitmapGridControl x:Name="BitmapGridControl1" ImageSource="{Binding Bitmap}" ImageOffset="{Binding CanvasControlOffset}"
-                                     ViewPortSize="{Binding CanvasSize}" />
+            <local:BitmapGridControl x:Name="BitmapGridControl1" ImageSource="{Binding Bitmap}" ViewPortSize="{Binding CanvasSize}" ImageOffset="{Binding ImageOffset}" />
         </Border>
     </Grid>
 </UserControl>
