--- a/src/MSetExplorer/Themes/Generic.xaml
+++ b/src/MSetExplorer/Themes/Generic.xaml
@@ -8,6 +8,28 @@
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type local:BitmapGridControl}">
                     <Border BorderThickness="1" BorderBrush="ForestGreen">
+
+                        <ContentPresenter x:Name="BitmapGridControl_Content">
+                            <ContentPresenter.Content>
+                                <Canvas x:Name="bmgcCanvas" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Background="Transparent">
+                                    <Image x:Name="bmgcImage" />
+                                </Canvas>
+
+                            </ContentPresenter.Content>
+                        </ContentPresenter>
+
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+
+    <!--<Style TargetType="{x:Type local:BitmapGridControl}">
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type local:BitmapGridControl}">
+                    <Border BorderThickness="1" BorderBrush="ForestGreen">
                         <ContentPresenter x:Name="BitmapGridControl_Content">
                             <ContentPresenter.Content>
                                 <Canvas x:Name="bmgcCanvas" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Background="Transparent">
@@ -20,7 +42,14 @@
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
-    </Style>
+    </Style>-->
+
+
+
+
+
+
+
 
     <!--<Style TargetType="{x:Type local:BitmapGridControl}">
         <Setter Property="Template">
