Created class: ZoomSlider and interface IContentScaleInfo to support using a Range Control to set the ContentScale property of the BitmapGridControl.

--- a/src/MSetExplorer/MapDisplay/Controls2/MapSectionDisplayControl2.xaml
+++ b/src/MSetExplorer/MapDisplay/Controls2/MapSectionDisplayControl2.xaml
@@ -22,6 +22,8 @@
                     UnscaledExtent="{Binding UnscaledExtent}"
                     BitmapGridImageSource="{Binding ImageSource}"
                     ImageOffset="{Binding ImageOffset}"
+                    ContentScale="{Binding DisplayZoom}"
+                    MaxContentScale="{Binding MaximumDisplayZoom}"
                     />
 
                 <!--<local:BitmapGridControl
