--- a/src/MSetExplorer/MapDisplay/ScrollAndZoom/MapDisplayZoomControl.xaml
+++ b/src/MSetExplorer/MapDisplay/ScrollAndZoom/MapDisplayZoomControl.xaml
@@ -12,8 +12,8 @@
                 <Button Click="ButtonSetMinZoom_Click" >Min</Button>
                 <TextBlock Margin="10,10,0,5">Zoom:</TextBlock>
                 <StackPanel HorizontalAlignment="Left" Orientation="Horizontal" Margin="0,5" x:Name="dispSecZoom">
-                    <TextBlock x:Name="txtblkZoomValue" Margin="5,95,2,0" >10</TextBlock>
-                    <ScrollBar x:Name="scrBarZoom" Margin="5,0,5,5" Orientation="Vertical" Height="200" Minimum="1" Maximum="20" Value="9.5"/>
+                    <TextBlock x:Name="textBlockZoomValue" Margin="5,95,2,0" >1</TextBlock>
+                    <ScrollBar x:Name="scrollBarZoomValue" Margin="5,0,5,5" Orientation="Vertical" Height="200" Minimum="0.1" Maximum="20" Value="1"/>
                 </StackPanel>
                 <Button Click="ButtonSetMaxZoom_Click">Max</Button>
             </StackPanel>
