--- a/src/MSetExplorer/PosterDesigner/PosterDesignerWindow.xaml
+++ b/src/MSetExplorer/PosterDesigner/PosterDesignerWindow.xaml
@@ -4,7 +4,6 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MSetExplorer"
-        xmlns:scroll="clr-namespace:MSetExplorer.MapDisplay.ScrollAndZoom"
         d:DataContext="{d:DesignInstance Type=local:PosterDesignerViewModel}"        
         mc:Ignorable="d"
         Title="Designer Window" Width="993" Height="608">
@@ -118,7 +117,7 @@
                 <Button Name="btnGoDown" HorizontalAlignment="Center" Width="100" FontSize="16" Margin="10,5" Command="local:CustomCommands.PanDown">Down</Button>
             </StackPanel>
 
-            <scroll:MapDisplayZoomControl Grid.Row="1" Margin="0,10"  x:Name="mapDisplayZoom1"/>
+            <local:MapDisplayZoomControl Grid.Row="1" Margin="0,10"  x:Name="mapDisplayZoom1"/>
 
         </Grid>
 
