--- a/src/MSetExplorer/MapDisplay/Controls/MapSectionPzControl.xaml
+++ b/src/MSetExplorer/MapDisplay/Controls/MapSectionPzControl.xaml
@@ -1,9 +1,9 @@
-﻿<UserControl x:Class="MSetExplorer.MapSectionDisplayControl2"
+﻿<UserControl x:Class="MSetExplorer.MapSectionPzControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:MSetExplorer" d:DataContext="{d:DesignInstance Type=local:MapSectionDisplayViewModel2}"
+             xmlns:local="clr-namespace:MSetExplorer" d:DataContext="{d:DesignInstance Type=local:MapSectionDisplayViewModel}"
              mc:Ignorable="d" 
              d:DesignHeight="1100" d:DesignWidth="1100"             
              x:Name="Mdc">
