--- a/src/MSetExplorer/Themes/Generic.xaml
+++ b/src/MSetExplorer/Themes/Generic.xaml
@@ -3,6 +3,46 @@
                     xmlns:local="clr-namespace:MSetExplorer">
 
 
+    <!--<Style TargetType="{x:Type local:PanAndZoomControl}">
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type local:PanAndZoomControl}">
+                    <Border BorderThickness="1" BorderBrush="Moccasin">
+
+                        <ContentPresenter x:Name="PanAndZoomControl_Content">
+                            <ContentPresenter.Content>
+
+                                <Canvas x:Name="pAndZCanvas" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Background="Transparent"/>
+
+                            </ContentPresenter.Content>
+                        </ContentPresenter>
+
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>-->    
+    
+    
+    <Style TargetType="{x:Type local:PanAndZoomControl}">
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type local:PanAndZoomControl}">
+                    <Border BorderThickness="2" BorderBrush="DarkTurquoise">
+
+                        <ContentPresenter x:Name="PART_Content" HorizontalAlignment="Center" VerticalAlignment="Center" />
+
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+        <Setter Property="Background">
+            <Setter.Value>
+                <SolidColorBrush Color="BlanchedAlmond"/>
+            </Setter.Value>
+        </Setter>
+    </Style>    
+    
 
     <!--<Style TargetType="{x:Type local:BitmapGridControl}">
         <Setter Property="Template">
@@ -27,10 +67,10 @@
 
 
 
-    <Style TargetType="{x:Type local:BitmapGridControl2}">
+    <!--<Style TargetType="{x:Type local:BitmapGridControl}">
         <Setter Property="Template">
             <Setter.Value>
-                <ControlTemplate TargetType="{x:Type local:BitmapGridControl2}">
+                <ControlTemplate TargetType="{x:Type local:BitmapGridControl}">
                     <Border BorderThickness="1" BorderBrush="ForestGreen">
 
                         <ContentPresenter x:Name="BitmapGridControl_Content">
@@ -46,27 +86,9 @@
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
-    </Style>
+    </Style>-->
 
-    <Style TargetType="{x:Type local:PanAndZoomControl}">
-        <Setter Property="Template">
-            <Setter.Value>
-                <ControlTemplate TargetType="{x:Type local:PanAndZoomControl}">
-                    <Border BorderThickness="1" BorderBrush="Moccasin">
 
-                        <ContentPresenter x:Name="PanAndZoom_Content">
-                            <ContentPresenter.Content>
-
-                                <Canvas x:Name="pAndZCanvas" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Background="Transparent"/>
-
-                            </ContentPresenter.Content>
-                        </ContentPresenter>
-
-                    </Border>
-                </ControlTemplate>
-            </Setter.Value>
-        </Setter>
-    </Style>
 
 
 </ResourceDictionary>
