--- a/src/MSetExplorer/Themes/Generic.xaml
+++ b/src/MSetExplorer/Themes/Generic.xaml
@@ -2,27 +2,6 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:local="clr-namespace:MSetExplorer">
 
-
-    <!--<Style TargetType="{x:Type local:PanAndZoomControl}">
-        <Setter Property="Template">
-            <Setter.Value>
-                <ControlTemplate TargetType="{x:Type local:PanAndZoomControl}">
-                    <Border BorderThickness="1" BorderBrush="Moccasin">
-
-                        <ContentPresenter x:Name="PanAndZoomControl_Content">
-                            <ContentPresenter.Content>
-
-                                <Canvas x:Name="pAndZCanvas" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Background="Transparent"/>
-
-                            </ContentPresenter.Content>
-                        </ContentPresenter>
-
-                    </Border>
-                </ControlTemplate>
-            </Setter.Value>
-        </Setter>
-    </Style>-->    
-    
     
     <Style TargetType="{x:Type local:PanAndZoomControl}">
         <Setter Property="Template">
@@ -44,15 +23,15 @@
     </Style>    
     
 
-    <!--<Style TargetType="{x:Type local:BitmapGridControl}">
+    <!--<Style TargetType="{x:Type local:BitmapGridControl3}">
         <Setter Property="Template">
             <Setter.Value>
-                <ControlTemplate TargetType="{x:Type local:BitmapGridControl}">
+                <ControlTemplate TargetType="{x:Type local:BitmapGridControl3}">
                     <Border BorderThickness="1" BorderBrush="DarkSlateBlue">
 
-                        <ContentPresenter x:Name="BitmapGridControl_Content">
+                        <ContentPresenter x:Name="PART_Content" HorizontalAlignment="Center" VerticalAlignment="Center">
                             <ContentPresenter.Content>
-                                <Canvas x:Name="bmgcCanvas" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Background="Transparent">
+                                <Canvas x:Name="MainCanvas" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Background="Transparent">
                                     <Image x:Name="bmgcImage" />
                                 </Canvas>
 
@@ -67,6 +46,21 @@
 
 
 
+    <Style TargetType="{x:Type local:BitmapGridControl3}">
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type local:BitmapGridControl3}">
+                    <Border BorderThickness="1" BorderBrush="DarkSlateBlue">
+
+                        <ContentPresenter x:Name="PART_Content" HorizontalAlignment="Center" VerticalAlignment="Center" />
+
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>    
+    
+    
     <!--<Style TargetType="{x:Type local:BitmapGridControl}">
         <Setter Property="Template">
             <Setter.Value>
